2006-07-17  Aaron Bockover  <abock@gnome.org>

	* HACKING: Updated

2006-07-17  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/MediaEngine/IEqualizer.cs: Added an equalizer interface
	that media engines can implement

2006-07-12  Patrick van Staveren  <trick@vanstaveren.us>

	* src/Banshee.Dap/Mtp/GPhotoDevice.cs:
	* src/Banshee.Dap/Mtp/MtpDap.cs: removed a bunch of unnecessary debug
	statements, cleaned up device detection so that it only happens when
	necessary.  Also removed SetOwner method so that Banshee doesn't allow
	in UI.

2006-07-12  Ruben Vermeersch  <ruben@Lambda1.be>

	Patch by Bertrand Lorentz <bertrand.lorentz@gmail.com> (BGO #336761)

	* data/banshee.schemas.in: 
	* src/PlayerInterface.cs:
	* src/PlaylistView.cs: Add support for showing a year column and searching
	track by year. The year column visibility defaults to false.

2006-07-11  Ruben Vermeersch  <ruben@Lambda1.be>

	* src/Banshee.Base/Plugins/PluginFactory.cs: Create user plugin dir if it
	doesn't exist. (BGO #346612) Makes life of plugin writers a bit easier as
	they can safely assume the user plugin dir exists.

	* src/Banshee.Plugins/Audioscrobbler/Queue.cs: Remove the unnecessairy
	test to check if the user plugin dir exists.

2006-07-10  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* src/Banshee.Base/Banshee.Cdrom.Gui/RecorderSpeedComboBox.cs:
	Fixed typo 

2006-07-08  Aaron Bockover  <aaron@abock.org>

	* libbanshee/gst-transcode-0.10.c: Expand virtual element 'cdwavenc'
	into a better pipeline to produce proper WAV PCM (proper endianness,
	width, depth, signed, rate, and channel attributes)

	* src/Banshee.Base/PipelineProfile.cs: Added support for virtual 'cdwavenc'

	* src/Banshee.Base/Banshee.Burner/BurnerSessionPreparer.cs: Use new virtual
	'cdwavenc' profile for writing audio CDs

2006-07-06  Aaron Bockover  <aaron@abock.org>

	Patch by Christopher Orr <chris@orr.me.uk> (BGO #346815)

	* src/Banshee.Base/PowerManagement.cs: Make Inhibit method generic;